# Tides

./: .gitignore  Analysis.hs  Extremes.hs  Extremes.out  Harmonics.hs  LICENSE  README.md  SearchTCDs.hs  SummarizeTCD.hs  TCD.hsc  TCDAux.c  TCDAux.h  TCDExtra.hs  TestRegressions.hs  TestTCD.hs  TestTCD.out  TestTides.hs  TideAmplitudes.hs  TideConstituents.hs  TideConstituents.out  Tides-DST-begin.out  Tides-DST-end.out  Tides.cabal  Tides.hs  Tides.out  TidesMain.hs  Time.hs  default.nix  harmonics.nix  libtcd.nix  regression.sh  shell.nix  stack-lts-16.yaml  stack-lts-20.yaml  stack-shell.nix  xtide.nix
.github/workflows/: haskell.yml
.golden/TideAmplitudes/: golden
.golden/TideConstituents/: golden
.golden/Tides-YearEnd/: golden
System/IO/: Fake.hs
