cabal-version: 3.8
build-type: Simple
name: Tides
version: 0.1.0.0
license: MIT
license-file: LICENSE
copyright: 2014-2025 Neil Mayhew
author: Neil Mayhew
maintainer: neil_mayhew@users.sourceforge.net
synopsis: A program for exploring tidal prediction data
description: Uses the Tide Component Database library (libtcd)

common language
  default-language: Haskell2010

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Wunused-packages
    -Werror

common libraries
  extra-libraries:
    tcd

library
  import: language, warnings, libraries
  exposed-modules:
    TCD
    TCDExtra

  build-depends:
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,

  c-sources:
    TCDAux.c
    TCDAux.h

executable Tides
  import: language, warnings, libraries
  main-is: TidesMain.hs
  other-modules:
    Analysis
    Harmonics
    System.IO.Fake
    TCDExtra
    Tides
    Time

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    infinite-list >=0.1 && <0.2,
    mtl >=2.2.2 && <2.4,
    random >=1.1 && <1.3,
    time >=1.5 && <1.15,
    time-locale-compat >=0.1.1.3 && <0.2,
    tz >=0.0.0.5 && <0.2,

executable Extremes
  import: language, warnings, libraries
  main-is: Extremes.hs
  other-modules:
    Analysis
    Harmonics
    TCDExtra
    Tides
    Time

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    infinite-list >=0.1 && <0.2,
    random >=1.1 && <1.3,
    time >=1.5 && <1.15,
    time-locale-compat >=0.1.1.3 && <0.2,
    tz >=0.0.0.5 && <0.2,

executable SummarizeTCD
  import: language, warnings, libraries
  main-is: SummarizeTCD.hs
  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    containers >=0.5.0.0 && <0.8,

executable SearchTCDs
  import: language, warnings, libraries
  main-is: SearchTCDs.hs
  other-modules:
    TCDExtra

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,

executable TestTides
  import: language, warnings, libraries
  main-is: TestTides.hs
  other-modules:
    Analysis
    Harmonics
    TCDExtra
    Tides
    Time

  build-depends:
    QuickCheck >=2.8 && <2.15,
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    infinite-list >=0.1 && <0.2,
    process >=1.2.3 && <1.7,
    random >=1.1 && <1.3,
    time >=1.5 && <1.15,
    tz >=0.0.0.5 && <0.2,

executable TestTCD
  import: language, warnings, libraries
  main-is: TestTCD.hs
  other-modules:
    System.IO.Fake
    TCDExtra

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    mtl >=2.2.2 && <2.4,

executable TideConstituents
  import: language, warnings, libraries
  main-is: TideConstituents.hs
  other-modules:
    System.IO.Fake
    TCDExtra

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    mtl >=2.2.2 && <2.4,

executable TideAmplitudes
  import: language, warnings, libraries
  main-is: TideAmplitudes.hs
  other-modules:
    System.IO.Fake
    TCDExtra

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    mtl >=2.2.2 && <2.4,

test-suite TestRegressions
  import: language, warnings, libraries
  type: exitcode-stdio-1.0
  main-is: TestRegressions.hs
  other-modules:
    Analysis
    Harmonics
    System.IO.Fake
    TCDExtra
    TestTCD
    TideAmplitudes
    TideConstituents
    Tides
    TidesMain
    Time

  build-depends:
    Tides,
    base >=4.6.0.1 && <5,
    directory >=1.2.0.1 && <1.4,
    filepath >=1.3.0.1 && <1.6,
    hspec >=2.7.6,
    hspec-golden >=0.1.0.3,
    infinite-list >=0.1 && <0.2,
    mtl >=2.2.2 && <2.4,
    random >=1.1 && <1.3,
    time >=1.5 && <1.15,
    time-locale-compat >=0.1.1.3 && <0.2,
    tz >=0.0.0.5 && <0.2,

  cpp-options:
    -DIN_TEST_HARNESS
